<resources>
    <string name="app_name">交日志</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">用户名错误</string>
    <string name="invalid_password">密码错误</string>
    <string name="login_failed">"登陆错误"</string>
    <string name="qrcode">二维码</string>
    <string name="tree_walk">树径</string>
    <string name="bag_number">袋数</string>
    <string name="fell_pic">砍倒照片</string>
    <string name="stump_pic">树桩照片</string>
    <string name="finish_pic">完成照片</string>
    <string name="operator">作业人</string>
    <string name="village">村</string>
    <string name="db">大班</string>
    <string name="xb">小班</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="operator_man">鲁仁华</string>
    <string name="village_default">大郅村</string>
    <string name="db_default">03</string>
    <string name="xb_default">808</string>
    <string name="tv_address">同安区大平镇大新村</string>
    <string name="login_message">已同意《许可及服务协议》及《隐私政策》</string>
    <string name="pests_type">业务类型</string>
    <string name="lv_bags">袋数</string>
    <string name="username">15959184067</string>
    <string name="et_me_nickname">Mike</string>
    <string name="sw_tianditu">天地图</string>
    <string name="sw_gallery_google">Google</string>
    <string name="sw_gallery_osm">OpenStreetMap</string>
    <string name="sw_gallery_amap">高德地图</string>
    <string name="tv_gallery_map">加载地图</string>
    <string name="tv_load_shp">增加离线地图</string>
    <string name="sw_geop_label">Geoq地图</string>
    <string name="sw_arcgis_label">ArcGIS地图</string>
    <string name="load_shp_label">加载SHP</string>
    <string name="load_geodatabase_label">加载GeoDatabase</string>
    <string name="tv_town">镇</string>
    <string name="pests_cancel">是否取消保存数据？</string>
    <string name="about">关于我们</string>
    <string name="member_disabled">用户是否禁用</string>
    <string name="istest">测试账户</string>
    <string name="btn_display_test">显示测试</string>
    <string name="btn_logout">登出</string>
    <string name="point_message">定位位置无法找到林业数据（镇、村、大班、小班）</string>
    <string name="feature_selected">选中要素：</string>
    <string name="no_file_exist">手机（内部存储-Download）目录下没有下载geodatabase文件，请联系技术员</string>
    <string name="storage_permission">用户拒绝申请权限</string>
    <string name="cant_load_geodatabase_file">无法加载离线地图文件</string>
    <string name="youmu">诱木</string>
    <string name="sw_tiandi">天地图</string>
    <string name="scount">数量</string>
    <string name="remark">备注</string>
    <string name="first">第一张</string>
    <string name="second">第二张</string>
    <string name="catchwarn">第一次收虫</string>
    <string name="lure_replace">是否更换诱芯</string>
    <string name="trap_btn_update">上传数据</string>
    <string name="trap_update_again_btn">再次上传</string>
    <string name="trap_delete_btn">删除数据</string>
    <string name="position">偏移（米）</string>
    <string name="count">数量</string>
    <string name="lure_replaces">换芯</string>
    <string name="scounts">只</string>
    <string name="second_receve">第二次收虫</string>
    <string name="code_int">二维码</string>
    <string name="trap_operator_set">挂设</string>
    <string name="trap_operator_d">第</string>
    <string name="trap_operator_sc">次收虫</string>
    <string name="trap_operator_first">第一次收虫</string>
    <string name="trap_operator_2">第二次收虫</string>
    <string name="trap_operator_3">第三次收虫</string>
    <string name="trap_operator_4">第四次收虫</string>
    <string name="trap_operator_5">第五次收虫</string>
    <string name="trap_operator_6">第六次收虫</string>
    <string name="trap_operator_7">第七次收虫</string>
    <string name="trap_operator_8">第八次收虫</string>
    <string name="trap_operator_9">第九次收虫</string>
    <string name="trap_operator_10">第十次收虫</string>
    <string name="auto_update">自动上传</string>
    <string name="sw_auto_upload_trap">自动上传诱捕器</string>
    <string name="sw_auto_upload_pests">自动上传其它作业</string>
    <string name="auto_update_APP">自动优化</string>
    <string name="me_set_load_shp">加载离线地图</string>
    <string name="me_is_scan">是否扫码</string>
</resources>